# SkillLint

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
baselines/: README.md  examples-balanced-baseline.json  golden-subset-eval.json  golden-subset-eval.md
config/: skilllint.default.yaml
deploy/systemd/: skilllint-web.service
docs/: release-v0.1.0.md  release-v0.1.1.md  release-v0.1.2.md  release-v0.2.0.md  release-v0.2.1.md  release-v0.2.2.md  release-v0.2.3.md  skill-security-threat-research-report.md  skilllint-cli-development-plan.md  skilllint-code-reading-guide.md  skilllint-correlation-scoring.md  skilllint-detector-architecture.md  skilllint-example-baseline.md  skilllint-fp-triage-round1.md  skilllint-fp-triage-round2.md  skilllint-fp-triage-round3.md  skilllint-fp-triage-round4.md  skilllint-golden-evaluation.md  skilllint-input-validation.md  skilllint-profiles.md  skilllint-report-format.md  skilllint-risk-flows.md  skilllint-rule-catalog.md  skilllint-sarif-output.md  skilllint-skill-safe-coverage-report.md  skilllint-skill-safe-gap-analysis.md  skilllint-system-design-and-implementation.md  skilllint-threat-taxonomy.md  skilllint-web-deployment.md
examples/: README.md  index.json
examples/zh-community/: README.md  index.json
golden/: skilllint-golden-subset.yaml
scripts/: collect_example_skills.py  collect_example_skills_zh.py  evaluate_golden_subset.py  generate_example_baseline.py
src/app/: __init__.py  api.py  main.py  schemas.py  service.py
src/skilllint/: __init__.py  baseline.py  cli.py  config.py  evaluation.py  flows.py  models.py  scoring.py
tests/: test_evaluation_and_scoring.py
tests/integration/: __init__.py
tests/unit/: test_app_api.py  (+18 more)
(+459 files in other folders)
